--- a/Assets/css/style-ethique.css
+++ b/Assets/css/style-ethique.css
@@ -253,178 +253,54 @@ body {
   background-color: #f2f6ff;
 }
 
-/* footer cita*/
-ul {
-  background-color: #f0f8ff;
-  padding: 22px 28px;
-  border-radius: 12px;
-  border: 1px solid #b8d9ff;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-  font-size: 1.05rem;
-}
-
-blockquote {
- background-color: #cce5ff;
-  padding: 22px 28px;
-  border-left: 6px solid #7cc4ff;
-  border-radius: 12px;
-  font-style: italic;
-  margin-top: 25px;
-  font-size: 1.05rem;
-}
-
-footer{
+/* ===== FOOTER ===== */
+footer {
   background-color: var(--bleu-clair);
-  display: block;
-  margin: 0;
-  padding: 0;
-  height: 450px;
-  justify-content: end;
-  color: aliceblue;
-  padding: 100px 120px 50px;
-  gap: 20px;
-  bottom: 0;
-  overflow:hidden;
+  color: black;
+  padding: 50px 20px;
+  text-align: center;
+  position: relative;
 }
+
+footer .suivre {
+  margin-bottom: 20px;
+}
+
+footer .suivre p {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
 footer .reseaux {
   display: flex;
-  justify-content: start;
-  align-items: start;
-  flex-direction: row;
-  margin-left: 30px;
-  position: absolute;
-  margin-top: 110px;
-  margin-left: 10px;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 30px;
 }
+
 footer .reseaux a {
-  width: 3%;
-  gap: 25px;
-  margin: 10px 10px 10px 0px;
-  transition: all .2s ease-in-out;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  transition: transform 0.2s ease-in-out;
 }
-footer .reseaux img{
+
+footer .reseaux a img {
   width: 100%;
+  height: 100%;
   border-radius: 50%;
 }
-#logo_SN{
-  margin-left: 100px;
+
+footer .reseaux a:hover {
+  transform: scale(1.1);
 }
-#logo_SL1:hover{
-  scale: 1.1;
-}
-#logo_SL2:hover{
-  scale: 1.1;
-}
-#logo_SL3:hover{
-  scale: 1.1;
-}
-#logo_SL4:hover{
-  scale: 1.1;
-}
-#logo_SN:hover{
-  scale: 1.1;
-}
-footer .liens{
-  text-align: center;
-  color: black;
-  display: flex;
-  align-items: start;
-  justify-content: start;
-  flex-direction: row;
-  float: right;
-  border: 1px solid rgba(200, 200, 200, 0.2);
-  gap: 20px;
-  padding: 20px;
-  border-radius: 20px;
-}
-footer .liens > div{
-  border: 1px dashed rgba(100, 100, 100, 0.1);
-  padding: 30px;
-  border-radius: inherit;
-}
-footer .liens h1{
-  margin: 0 0 30px 0;
-  font-size: 30px;
-}
-footer .sous-liens p{
-  color: black;
-  text-decoration: black;
-}
-footer .histoire{
-  display: flex;
-  justify-content: start;
-  align-items: start;
-  flex-direction: column;
-}
-.suivre{
-  display: flex;
-  justify-content: start;
-  align-items: start;
-  flex-direction: row;
-  float: left;
-  color: black;
-  padding-right: 10px;
-}
-#Suivez-les{
-  text-align: left;
-  margin-left: 85px;
-  margin-top: 40px;
-  width: 70px;
-  font-weight: bold;
-}
-#SN_hr{
-  float: left;
-  margin-top: 0;
-  width: 50px;
-  margin-left: 90px;
-  margin-right: 0;
-  color:  #e60000;
-  border-color: #e60000;
-  border-radius: 10px;
-}
-#Suivez-nous{
-  float: right;
-  margin-left: 145px;
-  margin-top: 40px;
-  margin-bottom: 0;
-  padding-top: 0;
-  font-weight: bold;
-}
-#SL_hr{
-  margin-top: 0;
-  width: 50px;
-  float: right;
-  color:  #224cf4;
-  border-color: #224cf4;
-  border-radius: 10px;
-  margin-right: 90px;
-}
-footer>p{
-  padding-top: 50px;
-  text-align: center;
-  margin-top: 0;
-  color: black;
-}
-#YWH{
-  width: 20%;
-  float: left;
-  margin-right: 15px;
-}
-#Y{
-  width: 10%;
-  float: left;
-}
-#img_acceuille{
-  width: 100%;
-  margin: 0;
-}
-footer #mentions{
-  margin-top: 330px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
+
+footer #mentions {
+  font-size: 18px;
   color: rgba(0, 0, 0, 0.5);
+  font-weight: bold;
 }
+
 /*  NETTO*/
 * {
   box-sizing: border-box;
